--- a/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
+++ b/src/app/Ui/Modules/reportes/reports/reporte-inventario/reporte-inventario.component.html
@@ -70,8 +70,8 @@
                         </th>
                         <td mat-cell *matCellDef="let row">
 
-                          <button class="px-6 py-3 flex gap-2 align-center" type="button" data-bs-toggle="offcanvas" data-bs-target="#detalledashboard" aria-controls="staticBackdrop">
-
+                          <button class="px-6 py-3 flex gap-2 align-center" type="button" >
+                            <!-- data-bs-toggle="offcanvas" data-bs-target="#detalledashboard" aria-controls="staticBackdrop"-->
                             <span
                               class="text-sm text-gray-600 dark:text-neutral-400"
                             >
