28_02_2025 ADD FULL WIDTH EN TAMAO TABLET

--- a/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/dashboard-inicial/dashboard-inicial.component.html
@@ -1,7 +1,7 @@
 <!-- Card Section -->
 <div class="max-w-[85rem] px-4 py-10 sm:px-6 lg:px-8 lg:py-14 mx-auto">
   <!-- Grid -->
-  <div class="grid sm:grid-cols-2 lg:grid-cols-1 gap-4 sm:gap-6">
+  <div class="grid sm:grid-cols-1 lg:grid-cols-1 gap-4 sm:gap-6">
     <!-- Card -->
     <div
       class="p-4 w-full md:p-5 min-h-[410px] flex flex-col bg-white border shadow-sm rounded-xl "
@@ -11,7 +11,7 @@
         <div>
           <h2 class="text-sm text-gray-500 dark:text-neutral-500">Inventarios registrados</h2>
           <p
-            class="text-xl sm:text-2xl font-medium text-gray-800 dark:text-neutral-200"
+            class="text-xl sm:text-2xl font-medium text-gray-800"
           >
             {{cantidadInventariosTotal}}
           </p>
