--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -88,7 +88,7 @@
                 <!-- =================================================================================== -->
                 <!-- Apartado opciones -->
                 <!-- =================================================================================== -->
-                <ng-container matColumnDef="opciones">
+                <!-- <ng-container matColumnDef="opciones">
                   <th mat-header-cell *matHeaderCellDef class="mat-accent"></th>
                   <td mat-cell *matCellDef="let element">
                     <div class="px-1 py-3 flex gap-2">
@@ -104,7 +104,7 @@
                       </button>
                     </div>
                   </td>
-                </ng-container>
+                </ng-container> -->
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
