--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -24,10 +24,7 @@
             class="bg-white border border-gray-200 rounded-xl shadow-sm overflow-hidden"
           >
             <div class="mat-elevation-z8 h-auto">
-
               <table mat-table [dataSource]="dataSource">
-
-
                 <!-- =================================================================================== -->
                 <!-- Apartado documento -->
                 <!-- =================================================================================== -->
@@ -62,7 +59,6 @@
                   </td>
                 </ng-container>
 
-
                 <!-- =================================================================================== -->
                 <!-- Apartado fecha registro -->
                 <!-- =================================================================================== -->
@@ -74,18 +70,23 @@
                     <button class="px-6 py-1 flex gap-2 align-center">
                       <mat-icon class="icon-ruc">event</mat-icon>
                       <span class="text-sm text-gray-600 dark:text-neutral-400">
-                        {{ element.fechacreacion ? (element.fechacreacion | date:'dd/MM/yyyy') : '-' }}
+                        {{
+                          element.fechacreacion
+                            ? (element.fechacreacion | date : "dd/MM/yyyy")
+                            : "-"
+                        }}
                       </span>
                     </button>
                   </td>
                 </ng-container>
 
-
                 <!-- =================================================================================== -->
                 <!-- Apartado estado -->
                 <!-- =================================================================================== -->
                 <ng-container matColumnDef="Estado">
-                  <th mat-header-cell *matHeaderCellDef class="mat-accent">Estado</th>
+                  <th mat-header-cell *matHeaderCellDef class="mat-accent">
+                    Estado
+                  </th>
                   <td mat-cell *matCellDef="let element">
                     <button
                       type="button"
@@ -124,7 +125,10 @@
                 </ng-container> -->
 
                 <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                <tr
+                  mat-row
+                  *matRowDef="let row; columns: displayedColumns"
+                ></tr>
               </table>
 
               <!-- =================================================================================== -->
@@ -136,8 +140,6 @@
                 aria-label="Select page of periodic elements"
               >
               </mat-paginator>
-
-
             </div>
           </div>
         </div>
@@ -145,7 +147,6 @@
     </div>
   </div>
 </section>
-
 
 <detalle-empresa-page
   [detalleEmpresa]="detalleEmpresa"
