01_03_2025 ARREGLO FILTRO BUSCAR ORIENTADO CORRECTAMNTE EMPRESAS

--- a/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
+++ b/src/app/Ui/Modules/configuration/Empresas/components/tables/table-lista-empresas/table-lista-empresas.component.html
@@ -1,7 +1,7 @@
 <!-- =================================================================================== -->
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
-<div class="container mt-2 sm:mt-2 lg:mt-0">
+<div class="max-w-[100rem] py-2 lg:py-0 mx-auto">
   <mat-form-field class="w-[100rem] sm:w-[20rem] lg:w-[20rem]">
     <mat-label>Buscar Empresa</mat-label>
     <span matTextPrefix> <mat-icon>search</mat-icon> &nbsp;</span>
