01_03_2025 ARREGLO FILTRO BUSCAR ORIENTADO CORRECTAMENTE CARGA INVENTARIOS

--- a/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Components/lista-inventarios-cargados/lista-inventarios-cargados.component.html
@@ -1,7 +1,7 @@
 <!-- =================================================================================== -->
 <!-- Apartado filtros -->
 <!-- =================================================================================== -->
-<div class="flex gap-2 mt-2 sm:mt-2 lg:mt-0">
+<div class="max-w-[100rem] py-2 lg:py-0 mx-auto flex gap-2">
   <mat-form-field class="ancho_empresas">
     <mat-label>Filtro Empresas</mat-label>
     <mat-select [(value)]="selectedEmpresa" (selectionChange)="emitirFiltros()">
