01_03_2025 ARREGLO AL OCULTAR DETALLE INVENTARIOS DEL OVERLAY

--- a/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/detalle-carga-inventarios/detalle-carga-inventarios.component.html
@@ -2,6 +2,7 @@
   class="offcanvas offcanvas-end ancho"
   tabindex="-1"
   id="hs-detalles-inventario"
+  data-bs-backdrop="static"
   aria-labelledby="hs-detalles-inventario"
 >
   <div class="offcanvas-header header-detalle">
