01_03_2025 ADD  DATOS USUARIO MODIFICADO

--- a/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
+++ b/src/app/Ui/Modules/Carga_Inventario/Page/lista-carga-inventarios/lista-carga-inventarios.component.html
@@ -17,10 +17,13 @@
     <div
       class="w-full flex items-center justify-end ms-auto md:justify-between gap-x-1 md:gap-x-3"
     >
-      <div class="hidden lg:flex lg:gap-4">
+      <div class="hidden lg:block">
         <h3 class="flex flex-row items-center justify-end gap-1">
           <span>CARGAR INVENTARIO</span>
         </h3>
+      </div>
+
+      <div class="md:block">
         <div class="relative">
           <button
             type="button"
@@ -33,16 +36,9 @@
           </button>
         </div>
       </div>
-
-      <div class="md:block">
-        <div class="relative">
-          <button-usuario-logueado />
-        </div>
-      </div>
     </div>
   </nav>
 </header>
-<!-- ========== END - HEADER ========== -->
 
 <!-- ========== START - TABLA ========== -->
 <div class="w-full h-auto lg:ps-64">
