--- a/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
+++ b/src/app/Ui/Modules/Dashboard/Components/header-dashboard/header-dashboard.component.html
@@ -3,8 +3,12 @@
     <div class="container-logo md:flex-1">
       <img src="../../../../../../assets/svg/icon-logo-DbInventory.svg" alt="search">
     </div>
-    <h3 class="md:flex-1">OPCIONES <span>INVENTARIO</span></h3>
-    <button (click)="logout()" class="border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE] ">Salir</button>
+    <h3 class="hidden md:flex-1 lg:flex">OPCIONES <span>INVENTARIO</span></h3>
+    <div class="flex gap-4">
+      <button (click)="logout()" class="border-2 px-5 py-1 text-gray-100 rounded-md hover:text-[#00D1AE] hover:border-[#00D1AE] ">Salir</button>
+      <button-usuario-logueado />
+    </div>
+
   </div>
   <div class="container_menuopciones">
     <section-opciones />
