--- a/src/app/Ui/Modules/UsuarioLogueado/components/button-usuario-logueado/button-usuario-logueado.component.html
+++ b/src/app/Ui/Modules/UsuarioLogueado/components/button-usuario-logueado/button-usuario-logueado.component.html
@@ -1,8 +1,9 @@
 <button
 (click)="IrUsuarioLogin()"
-  mat-icon-button
+  mat-button
   type="button"
-  class="py-2 px-3 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border-transparent disabled:opacity-50 disabled:pointer-events-none"
+  class="py-2 px-3 border border-white inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border-transparent disabled:opacity-50 disabled:pointer-events-none"
 >
-  <mat-icon class="mat-18 text-blue-700">person</mat-icon>
+  <mat-icon class="mat-18 text-white">person</mat-icon>
+  <span class="text-white">Usuario</span>
 </button>
