--- a/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
+++ b/src/app/Ui/Modules/UsuarioLogueado/page/usuario-logueado-page/usuario-logueado-page.component.html
@@ -1,7 +1,7 @@
 <body
   class="sticky top-0 inset-x-0 flex flex-wrap md:justify-start md:flex-nowrap z-[48] w-full bg-white text-sm lg:ps-[220px] lg:pe-[0px]"
 >
-  <div class="w-full mx-auto mt-0 bg-white shadow-md overflow-hidden">
+  <div class="w-full mx-auto mt-0 bg-white border-b-2 overflow-hidden">
     <!-- Cover Image -->
     <div class="h-32 bg-gradient-to-r from-gray-300 to-gray-300 relative"></div>
 
